# auto_keypress

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: main.rs
src/auto/: key_press.rs
