[package]
name = "auto_keypress"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = { version = "0.48.0", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_Storage_FileSystem",
    "Win32_System_ProcessStatus",
        "UI_UIAutomation",
           "Win32_System_Com",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
 "Win32_System_Ole",
 "Win32_UI_Input",
 "Win32_UI_Input_KeyboardAndMouse"
]}

mysql = "24.0.0"
anyhow = "1.0"

tokio = { version = "1.32.0", features = ["full"] }
uuid={version="1.4.0",features = [
    "v4",               
    "fast-rng",         
    "macro-diagnostics",
]}

rand = "0.8.5"
chrono = "0.4.26"
pinyin = "0.10"
lazy_static = "1.4.0"
clap = { version = "4.3.23", features = ["derive"] }
